syntax = "proto3";

package movie.v1.cmd;

import "common/types_common_v1.proto";
import "google/protobuf/empty.proto";

option go_package = "api/pb/v1/cmdpb";

service MovieApi {
    //admin
    //client
    rpc CreateGenre(CreateGenreRequest) returns (CreateGenreResponse);
    rpc UpdateGenre(UpdateGenreRequest) returns (google.protobuf.Empty);
    rpc DeleteGenre(DeleteGenreRequest) returns (google.protobuf.Empty);

    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
    rpc UpdateMovie(UpdateMovieRequest) returns (google.protobuf.Empty);
    rpc DeleteMovie(DeleteMovieRequest) returns (google.protobuf.Empty);

    rpc CreateFranchise(CreateFranchiseRequest) returns (CreateFranchiseResponse);
    rpc UpdateFranchise(UpdateFranchiseRequest) returns (google.protobuf.Empty);
    rpc DeleteFranchise(DeleteFranchiseRequest) returns (google.protobuf.Empty);

    rpc CreateSeries(CreateSeriesRequest) returns (CreateSeriesResponse);
    rpc UpdateSeries(UpdateSeriesRequest) returns (google.protobuf.Empty);
    rpc DeleteSeries(DeleteSeriesRequest) returns (google.protobuf.Empty);

    rpc CreateSeason(CreateSeasonRequest) returns (CreateSeasonResponse);
    rpc UpdateSeason(UpdateSeasonRequest) returns (google.protobuf.Empty);
    rpc DeleteSeason(DeleteSeasonRequest) returns (google.protobuf.Empty);

    rpc CreateAdapted(CreateAdaptedRequest) returns (CreateAdaptedResponse);
    rpc UpdateAdapted(UpdateAdaptedRequest) returns (google.protobuf.Empty);
    rpc DeleteAdapted(DeleteAdaptedRequest) returns (google.protobuf.Empty);

    rpc CreateHint(CreateHintRequest) returns (CreateHintResponse);
    rpc UpdateHint(UpdateHintRequest) returns (google.protobuf.Empty);
    rpc DeleteHint(DeleteHintRequest) returns (google.protobuf.Empty);

    rpc CreateCast(CreateCastRequest) returns (CreateCastResponse);
    rpc DeleteCast(DeleteCastRequest) returns (google.protobuf.Empty);
    rpc SetCastRole(SetCastRoleRequest) returns (google.protobuf.Empty);

    rpc SetMovieState(SetMovieStateRequest) returns (google.protobuf.Empty);
    rpc LikeMovie(LikeMovieRequest) returns (google.protobuf.Empty);
    rpc SetFranchise(SetFranchiseRequest) returns( google.protobuf.Empty);


}

message SetCastRoleRequest {
    int64 cast_id =1;
    common.MultiLingualString role  = 2;
}

message CreateGenreRequest {
    common.MultiLingualString title = 1;
}

message CreateGenreResponse {
    int64 genre_id = 1;
}

message UpdateGenreRequest {
    int64 genre_id                  = 1;
    common.MultiLingualString title = 2;
}

message DeleteGenreRequest {
    int64 genre_id = 1;
}

message CreateMovieRequest {
    message Series {
        int64 season_id      = 1;
        int32 episode_no     = 2;
        bool is_last_episode = 3;
    }

    message Franchise {
        int64 franchise_id = 1;
    }

    optional int64 movie_type_id = 1;

    oneof specific {
        Series series       = 2;
        Franchise franchise = 3;
    }

    common.MultiLingualString title = 4;
    bool is_coming_soon             = 5;
    int64 release_at          = 7;

    repeated int64 genre_ids                            = 10;
    optional common.MultiLingualString plot               = 11;
    optional string production_country                   = 12;

    optional string filming_location                      = 13;
    optional int64 production_start_date = 14;
    optional int64 production_end_date = 15;
    optional int64 visible_at = 16;
    optional int64 available_at = 17;
    repeated int64 age_group_ids = 18; 
    optional string state_change_reason = 19; 
    bool is_play_free             = 20;
    bool is_download_free         = 21;
    common.MultiLingualString criticism             = 22;
    double imdb         = 23;
}

message CreateMovieResponse {
    int64 movie_id = 1;
}

message UpdateMovieRequest {
    message Series {
        int64 season_id      = 1;
        int32 episode_no     = 2;
        bool is_last_episode = 3;
    }

    message Franchise {
        int64 franchise_id = 1;
    }

    int64 movie_id      = 1;
    optional int64 movie_type_id = 2;

    oneof specific {
        Series series       = 3;
        Franchise franchise = 4;
    }

    common.MultiLingualString title = 5;
    bool is_coming_soon             = 6;
    // int32 produced_year             = 7; removed in favor of range date
    int64 release_at          = 8;

    optional int64 schedule_cast_id                     = 9;
    optional int64 schedule_cast_at = 10;
    repeated int64 genre_ids                            = 11;
    optional common.MultiLingualString plot               = 12;
    optional string production_country                   = 13;
    optional string filming_location                      = 14;
    optional int64 production_start_date = 15;
    optional int64 production_end_date = 16;
    optional int64 visible_at = 17;
    optional int64 available_at = 18;
    repeated int64 age_group_ids = 19; 
    optional string state_change_reason = 20; 
    bool is_play_free             = 21;
    bool is_download_free         = 22;
    common.MultiLingualString criticism = 23;
    double imdb         = 24;
}

message DeleteMovieRequest {
    int64 movie_id = 1;
}

message CreateFranchiseRequest {
    common.MultiLingualString title                     = 1;
}

message CreateFranchiseResponse {
    int64 franchise_id = 1;
}

message UpdateFranchiseRequest {
    int64 franchise_id                                  = 1;
    common.MultiLingualString title                     = 2;
}

message DeleteFranchiseRequest {
    int64 franchise_id = 1;
}

message CreateSeriesRequest {
    common.MultiLingualString title                     = 1;
    optional int64 schedule_cast_id                     = 2;
    optional int64 schedule_cast_at = 3;
    int64 movie_type_id = 4;
}

message CreateSeriesResponse {
    int64 series_id = 1;
}

message UpdateSeriesRequest {
    int64 series_id                                     = 1;
    common.MultiLingualString title                     = 2;
    optional int64 schedule_cast_id                     = 3;
    optional int64 schedule_cast_at = 4;
    int64 movie_type_id = 5;
}

message DeleteSeriesRequest {
    int64 series_id = 1;
}

message CreateSeasonRequest {
    int64 series_id                                     = 1;
    int32 season_no                                     = 2;
    common.MultiLingualString title                     = 3;
}

message CreateSeasonResponse {
    int64 season_id = 1;
}

message UpdateSeasonRequest {
    int64 season_id                                     = 1;
    int64 series_id                                     = 2;
    int32 season_no                                     = 3;
    common.MultiLingualString title                     = 4;
}

message DeleteSeasonRequest {
    int64 season_id = 1;
}

message CreateAdaptedRequest {
    int64 movie_id                          = 1;
    optional int64 adapted_of_movie_id      = 2;
    int64 adapted_type_id                   = 3;
    common.MultiLingualString title         = 4;
    optional string url                     = 5;
    optional common.MultiLingualString desc = 6;
}

message CreateAdaptedResponse {
    int64 adapted_id = 1;
}

message UpdateAdaptedRequest {
    int64 adapted_id                        = 1;
    int64 movie_id                          = 2;
    optional int64 adapted_of_movie_id      = 3;
    int64 adapted_type_id                   = 4;
    common.MultiLingualString title         = 5;
    optional string url                     = 6;
    optional common.MultiLingualString desc = 7;
}

message DeleteAdaptedRequest {
    int64 adapted_id = 1;
}

message CreateHintRequest {
    int64 movie_id      = 1;
    int64 hint_movie_id = 2;
    string description = 3;
}

message CreateHintResponse {
    int64 hint_id = 1;
}

message UpdateHintRequest {
    int64 hint_id       = 1;
    int64 movie_id      = 2;
    int64 hint_movie_id = 3;
    string description = 4;
}

message DeleteHintRequest {
    int64 hint_id = 1;
}

message CreateCastRequest {
    common.Cast cast=1;
}

message CreateCastResponse {
    int64 cast_id = 1;
}
 
message DeleteCastRequest {
    int64 cast_id = 1;
}

message SetMovieStateRequest {
    common.MovieState state=1;
    int64 movie_id = 2;
    optional string state_change_reason = 3; 
}

message LikeMovieRequest {
  int64 movie_id = 1;
  optional bool like = 2;
}

message SetFranchiseRequest {
    int64 movie_id=1;
    optional int64 franchise_id=2;
}