syntax = "proto3";

package movie.v1.qry;

import "common/types_common_v1.proto";
import "google/protobuf/empty.proto";

option go_package = "api/pb/v1/qrypb";

service ContentApi {
  //Content
  rpc GetContent(GetContentRequest) returns (GetContentResponse);
  rpc ListContent(ListContentRequest) returns (ListContentResponse);
  rpc ListContentDetail(ListContentDetailRequest) returns (ListContentDetailResponse);

  //Age Group
  rpc ListAgeGroup(google.protobuf.Empty) returns (ListAgeGroupResponse);
  rpc GetAgeGroup(GetAgeGroupRequest) returns (GetAgeGroupResponse);
  rpc GetScenes(GetScenesRequest) returns (GetScenesResponse);

  //ListScenes
  rpc ListScenes(google.protobuf.Empty) returns (ListScenesResponse);
 
  rpc ListMetaContent(ListMetaContentRequest) returns (ListMetaContentResponse);
  
  //Note
  rpc ListContentWithNotesByProfile(ListContentWithNotesByProfileRequest) returns (ListContentWithNotesByProfileResponse);
  rpc ListContentNoteByProfile(ListContentNoteByProfileRequest) returns (ListContentNoteByProfileResponse);
  rpc ListContentNote(ListContentNoteRequest) returns (ListContentNoteResponse);

  //Comment
  rpc ListContentComment(ListContentCommentRequest) returns (ListContentCommentResponse);
  rpc ListContentCommentReport(google.protobuf.Empty) returns (ListContentCommentReportResponse);
}

message GetScenesResponse {
  common.Scenes scenes=1;
}

message GetAgeGroupResponse {
  common.AgeGroup age_group=1;
}

message GetAgeGroupRequest {
   int64 age_group_id=1;
}

message GetScenesRequest {
  int64 scenes_id=1;
}


message ListContentDetailRequest {
  int64 movie_id = 1;
}

message ListContentDetailResponse {
  message Content {

    message Dialect {
      int64 dialect_id =1;
      string language =  2;
      string title =     3;
    }
    message Subtitle {
      int64 subtitle_file_id = 1;
      bool is_close_caption =2;
      Dialect dialect =3;
    }
    message Audio {
      int64 audio_file_id = 1;
      bool has_visual_description=2;
      Dialect dialect =3;
    }
    message Scene {
      int64 scene_id = 1;
      common.MultiLingualString title = 2;
    }
 

    int64 content_id = 1;
    string video_file_id = 2;
    repeated Scene scenes = 3;
    int32 age_restricted = 4;
    common.ContentTypes type_id = 6;
    repeated Audio audios = 7;
    repeated Subtitle subtitles = 8;
    repeated common.MetaContent meta_contents=9;
    common.ContentState state                   = 10;
  }
  repeated Content contents = 1;
}

message ListContentRequest {
  int64 movie_id = 1;
}

message ListContentResponse {
  message Content {
    message Subtitle {
      int64 subtitle_file_id = 1;
      bool is_close_caption =3;
      int64 dialect_id =4;
    }
    message Audio {
      int64 audio_file_id = 1;
      bool has_visual_description=3;
      int64 dialect_id =4;
    }
    int64 content_id = 1;
    string video_file_id = 2;
    repeated int64 scenes_id = 3;
    int32 age_restricted = 4;
//  repeated int64 age_group_ids = 5; 
    common.ContentTypes type_id = 6;
    repeated Audio audios = 7;
    repeated Subtitle subtitles = 8;
    common.ContentState state                   = 9;
  }
  repeated Content contents = 1;
}

message GetContentRequest {
  int64 content_id=1;
}

message GetContentResponse {
    message Subtitle {
      int64 subtitle_file_id = 1;
      bool is_close_caption =3;
      int64 dialect_id =4;
    }
    message Audio {
      int64 audio_file_id = 1;
      bool has_visual_description=3;
      int64 dialect_id =4;
    }
    int64 content_id = 1;
    string video_file_id = 2;
    repeated int64 scenes_id = 3;
    int32 age_restricted = 4;
//    repeated int64 age_group_ids = 5;
    common.ContentTypes type_id = 6;
    repeated Audio audios = 7;
    repeated Subtitle subtitles = 8;
}
//Age Group

message ListAgeGroupResponse {
  message AgeGroup {
    int64 age_group_id = 1;
    int32 from = 2;
    int32 to = 3;
  }
  repeated AgeGroup age_groups = 1;
}


//Scenes

message ListScenesResponse {
  message Scene {
    int64 scene_id = 1;
    common.MultiLingualString title = 2;
  }
  repeated Scene scenes = 1;
}

message ListMetaContentRequest {
  int64 content_id = 1; 
  optional common.MetaContentTypes type_id = 2;
}

message ListMetaContentResponse {
  repeated common.MetaContent meta_contents = 1;
}

message ListContentNoteByProfileRequest {
    int64 content_id = 1;
    common.OffsetPaginationRequest page = 2;
}

message ListContentNoteByProfileResponse {
  message ContentNote{
    int64 id = 1;
    int64 content_id = 2;
    int64 StartTime = 3;
    optional int64 EndTime = 4;
    string Note = 5;
  }
  int64 total_count = 1;
  repeated ContentNote notes = 2;
}

message ListContentWithNotesByProfileRequest {
  common.OffsetPaginationRequest page = 1;
}

message ListContentWithNotesByProfileResponse {
  message Content{
    int64 content_id = 1;
    int64 movie_id = 2;
    common.MultiLingualString movie_title = 3;
    string video_file_id = 4;
  }
  int64 total_count = 1;
  repeated Content contents = 2;
}

message ListContentNoteRequest {
  int64 content_id = 2;
}

message ListContentNoteResponse {
  message ContentNote{
    int64 id = 1;
    int64 content_id = 2;
    int64 StartTime = 3;
    optional int64 EndTime = 4;
    string Note = 5;
    common.ProfileDetails profile = 6; 
  }
  repeated ContentNote notes = 1;
}

message ListContentCommentRequest {
  int64 content_id = 2;
}

message ListContentCommentResponse {
  message ContentComment{
    int64 id = 1;
    int64 content_id = 2;
    int64 StartTime = 3;
    optional int64 EndTime = 4;
    string Comment = 5;
    common.ProfileDetails profile = 6; 
  }
  repeated ContentComment comments = 1;
}

message ListContentCommentReportResponse {

  message ContentComment {
    int64 id = 1;
    int64 content_id = 2;
    string Comment = 3;
    common.ProfileDetails profile = 4; 
    int32 report_count = 5; 
  }

  repeated ContentComment comments = 1;
}